Login dropdown fixed for beyond 1850px width. Below it should drop to a visible position.

--- a/src/app/components/navbar/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar/navbar.component.scss
@@ -1,3 +1,13 @@
+$grid-breakpoints: (
+  xs: 0,
+  sm: 600px,
+  md: 800px,
+  lg: 1000px,
+  xl: 1850px
+);
+@import "../../../../../node_modules/bootstrap/scss/bootstrap";
+
+
 .navbar {
   z-index: 5;
 }
@@ -299,7 +309,6 @@ img {
 .fa-28px {
   font-size: 28px;
 }
-
 
 
 
